--- a/src/app/components/footer.astro
+++ b/src/app/components/footer.astro
@@ -2,7 +2,7 @@
   <div class="max-w-7xl mx-auto px-4 overflow-hidden sm:px-6 lg:px-8">
     <div class="mt-8 flex justify-center space-x-6">
       <a
-        href="https://facebook.com/rayriffy"
+        href="https://facebook.com/SRBSiravijbb"
         class="text-gray-400 hover:text-gray-500"
       >
         <span class="sr-only">Facebook</span>
@@ -20,7 +20,7 @@
       </a>
 
       <a
-        href="https://github.com/rayriffy/rayriffy-blog-next"
+        href="https://github.com/siravijbb/siravijbb-blog-by-rayriffy-blog-next"
         class="text-gray-400 hover:text-gray-500"
       >
         <span class="sr-only">GitHub</span>
@@ -38,7 +38,7 @@
       </a>
     </div>
     <p class="mt-8 text-center text-base text-gray-500">
-      &copy; {new Date().getFullYear()} Phumrapee Limpianchop
+      &copy; {new Date().getFullYear()} Siravij Praevisavakij
     </p>
   </div>
 </footer>
