--- a/src/app/components/layout.astro
+++ b/src/app/components/layout.astro
@@ -19,7 +19,7 @@ const {
   image = 'https://blog.rayriffy.com/default.jpg',
 } = Astro.props
 
-const transformedTitle = title === '' ? 'Riffy Blog' : `Riffy Blog · ${title}`
+const transformedTitle = title === '' ? 'Siravij Blog' : `Siravij Blog · ${title}`
 ---
 
 <!DOCTYPE html>
@@ -29,7 +29,7 @@ const transformedTitle = title === '' ? 'Riffy Blog' : `Riffy Blog · ${title}`
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="icon" href="/favicon.png" />
+    
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -53,7 +53,7 @@ const transformedTitle = title === '' ? 'Riffy Blog' : `Riffy Blog · ${title}`
     <meta property="og:image" content={image} />
     <meta property="twitter:image" content={image} />
 
-    <script
+    <!--<script
       async
       src="https://www.googletagmanager.com/gtag/js?id=G-J24WPTD619"
       type="text/partytown"
@@ -67,7 +67,7 @@ const transformedTitle = title === '' ? 'Riffy Blog' : `Riffy Blog · ${title}`
   
         gtag('config', 'G-J24WPTD619');
       `}
-    ></script>
+    ></script>-->
   </head>
   <body>
     <div class="py-12 space-y-8">
