Small change:Following found unchanged

--- a/src/app/components/layout.astro
+++ b/src/app/components/layout.astro
@@ -15,8 +15,8 @@ export interface Props {
 
 const {
   title = '',
-  description = 'The Nerdy Blogger',
-  image = 'https://blog.rayriffy.com/default.jpg',
+  description = 'The Siravijbb Blog',
+  image = 'https://blog.siravijbb.me/default.jpg',
 } = Astro.props
 
 const transformedTitle = title === '' ? 'Siravij Blog' : `Siravij Blog · ${title}`
